--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -239,7 +239,7 @@
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     min-width: 400px;
     min-height: 90px;
-
+	max-width: 600px;
 
     @media (max-width: @maxPhoneWidth) {
         min-width: 300px;
