--- a/src/Frontend/src/common.less
+++ b/src/Frontend/src/common.less
@@ -1,5 +1,15 @@
 @import "variables.less";
 
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Segoe UI",Arial,sans-serif;
+}
+
 .caret {
     display: inline-block;
     width: 0;
