--- a/src/Frontend/src/components/comments/comment.less
+++ b/src/Frontend/src/components/comments/comment.less
@@ -1,3 +1,10 @@
+@import "./../../variables.less";
+
+button {
+  border: none;
+  background: transparent;
+}
+
 .header {
   margin: 30px auto 20px;
   font-weight: 500;
@@ -7,10 +14,11 @@
   border: none;
 }
 
-.comment-send-form {
+.commentSendForm {
   display: flex;
   flex-direction: row;
-  margin-bottom: 40px;
+  //justify-content: space-between;
+  margin: 20px 0 40px;
 }
 
 .avatar {
@@ -22,42 +30,38 @@
   background-color: #3072C4;
 }
 
-.comment-send {
+.commentSend {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  margin-left: 12px;
+
+  textarea {
+	max-width: 100%;
+  }
 }
 
-.comment-buttons {
+.commentButtons {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  margin-top: 7px;
 }
 
-.send-button {
-  display: block;
-  background-color: #3072C4;
-  border: none;
-  width: 205px;
-  height: 50px;
-  color: #fff;
-  border-radius: 4px;
-  font-size: 15px;
-  margin: 10px 0;
-}
-
-.markdown-buttons {
-  width: 30%;
+.markdownButtons {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
-.markdown-icon {
-  font-weight: bold;
-  color: #555555;
-  font-size: 20px;
+.markdownText {
+  line-height: 15px;
+  font-size: 12px;
+  text-align: center;
+  color: @disabledColor;
+  margin-right: 26px;
 }
