Changed CommentSendForm structure: singled out component.

--- a/src/Frontend/src/components/comments/Comment/comment.less
+++ b/src/Frontend/src/components/comments/Comment/comment.less
@@ -52,7 +52,7 @@ button {
 .actions {
   display: flex;
   justify-content: flex-start;
-  margin-top: 5px;
+  margin: 5px 0 20px;
 }
 
 .userButton {
@@ -72,3 +72,17 @@ button {
   margin-left: 5px;
 }
 
+.markdownButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.markdownText {
+  line-height: 15px;
+  font-size: 12px;
+  text-align: center;
+  color: #a0a0a0;
+  margin-right: 26px;
+}
