A lot fixed methods in CommentSendForm. Added methods in Comment.

--- a/src/Frontend/src/components/comments/Comment/comment.less
+++ b/src/Frontend/src/components/comments/Comment/comment.less
@@ -14,13 +14,15 @@ button {
   justify-content: flex-start;
   align-items: flex-start;
   margin-left: 10px;
+  width: 100%;
 }
 
 .header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  width: inherit;
+  align-items: baseline;
 }
 
 .author {
@@ -38,6 +40,42 @@ button {
   color: #808080;
   font-size: 14px;
   margin-left: 3px;
+}
+
+.correctAnswerMark, .pinnedToTopMark {
+  padding: 0 6px 1px;
+  background: #3F9726;
+  border-radius: 3px;
+  color: #fff;
+  text-align: center;
+  line-height: 20px;
+  font-size: 14px;
+  margin-left: 10px;
+}
+
+.pinnedToTopMark {
+  background: #3072C4;
+}
+
+.correctAnswerText,
+.pinnedToTopText {
+  margin-left: 3px;
+}
+
+.hiddenCommentMark {
+  padding: 0 10px;
+  background: #F2F2F2;
+  border: 1px solid #E5E5E5;
+  color: #A0A0A0;
+  font-size: 14px;
+  text-align: center;
+  line-height: 20px;
+  border-radius: 3px;
+  margin-left: 10px;
+}
+
+.instructorsActions {
+ margin-left: auto;
 }
 
 .timeSinceAdded {
