--- a/src/Frontend/src/components/comments/CommentSendForm/commentSendForm.less
+++ b/src/Frontend/src/components/comments/CommentSendForm/commentSendForm.less
@@ -5,15 +5,6 @@ button {
   background: transparent;
 }
 
-.header {
-  margin: 30px auto 20px;
-  font-weight: 500;
-  text-align: left;
-  font-size: 32px;
-  line-height: 30px;
-  border: none;
-}
-
 .commentSendForm {
   display: flex;
   flex-direction: row;
@@ -27,8 +18,7 @@ button {
   border-radius: 4px;
   min-width: 55px;
   height: 55px;
-  margin-right: 10px;
-  background-color: #3072C4;
+  margin-right: 12px;
 }
 
 .commentSend {
@@ -36,12 +26,26 @@ button {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  margin-left: 12px;
   width: 100%;
 
   textarea {
 	max-width: 100%;
   }
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: inherit;
+  margin-top: 12px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 210px;
 }
 
 .commentButtons {
