--- a/src/Frontend/src/components/comments/Comment/comment.less
+++ b/src/Frontend/src/components/comments/Comment/comment.less
@@ -20,7 +20,7 @@ button {
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: inherit;
   align-items: baseline;
 }
@@ -34,6 +34,7 @@ button {
   border: 0;
   background: transparent;
   padding: 0;
+  cursor: pointer;
 }
 
 .likesCount {
@@ -75,7 +76,8 @@ button {
 }
 
 .instructorsActions {
- margin-left: auto;
+  margin-left: auto;
+  cursor: pointer;
 }
 
 .timeSinceAdded {
@@ -91,10 +93,12 @@ button {
   display: flex;
   justify-content: flex-start;
   margin: 5px 0 20px;
+  cursor: pointer;
 }
 
 .userButton {
   display: none;
+  cursor: pointer;
 }
 
 .sendAnswer {
@@ -103,11 +107,20 @@ button {
   color: #3072C4;
   padding: 0;
   margin-right: 20px;
+  cursor: pointer;
 }
 
 .buttonText {
   display: inline-block;
   margin-left: 5px;
+  font-size: 13px;
+}
+
+.linkText {
+  font-size: 13px;
+  font-weight: 400;
+  margin-left: 5px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .markdownButtons {
@@ -115,6 +128,7 @@ button {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
 }
 
 .markdownText {
