Added api request in CommentsList component. Change request in CommentsWrapper.

--- a/src/Frontend/src/components/comments/CommentsWrapper/CommentsWrapper.less
+++ b/src/Frontend/src/components/comments/CommentsWrapper/CommentsWrapper.less
@@ -30,3 +30,16 @@
 .commentsContainer {
   margin-top: 30px;
 }
+
+.commentsCount {
+  display: inline-block;
+  background: #DADADA;
+  border-radius: 100px;
+  padding: 2px 6px;
+  font-family: Segoe UI, serif;
+  font-size: 10px;
+  text-align: center;
+  margin-left: 6px;
+  line-height: 1.1;
+  vertical-align: middle;
+}
