NotAnonimObjects in CommentsWrapper props

--- a/src/uLearn.Web/Views/Comments/SlideComments.cshtml
+++ b/src/uLearn.Web/Views/Comments/SlideComments.cshtml
@@ -62,15 +62,15 @@
 @{
 	var forInstructorsOnlyTopLevelComments = Model.TopLevelComments.Where(c => c.IsForInstructorsOnly).ToList();
 	var forEveryoneTopLevelComments = Model.TopLevelComments.Where(c => !c.IsForInstructorsOnly).ToList();
-	var commentsWrapperUser = new { id = Model.CurrentUser == null ? null : Model.CurrentUser.Id, isAuthenticated = Model.IsAuthorizedAndCanComment, visibleName = Model.CurrentUser == null ? null : Model.CurrentUser.VisibleName, avatarUrl = Model.CurrentUser == null ? null : Model.CurrentUser.AvatarUrl };
+	var commentsWrapperUser = new CommentsWrapperUserData { Id = Model.CurrentUser == null ? null : Model.CurrentUser.Id, IsAuthenticated = Model.IsAuthorizedAndCanComment, VisibleName = Model.CurrentUser == null ? null : Model.CurrentUser.VisibleName, AvatarUrl = Model.CurrentUser == null ? null : Model.CurrentUser.AvatarUrl };
 	var courseRole = User == null ? null : User.GetCourseRole(Model.CourseId);
 	var courseRoleString = courseRole == null ? null : courseRole.Value.ToString("G");
 	courseRoleString = courseRole == null ? null : char.ToLowerInvariant(courseRoleString[0]) + courseRoleString.Substring(1);
-	var courseAccesses = Model.CourseAccesses.Select(a => a.AccessType.ToString("G")).Select(a => char.ToLowerInvariant(a[0]) + a.Substring(1));
-	var commentsWrapperUserRoles = User == null ? null : new { isSystemAdministrator = User.IsSystemAdministrator(), courseRole = courseRoleString, courseAccesses = courseAccesses };
+	var courseAccesses = Model.CourseAccesses.Select(a => a.AccessType.ToString("G")).Select(a => char.ToLowerInvariant(a[0]) + a.Substring(1)).ToList();
+	var commentsWrapperUserRoles = User == null ? null : new CommentsWrapperUserRolesData { IsSystemAdministrator = User.IsSystemAdministrator(), CourseRole = courseRoleString, CourseAccesses = courseAccesses };
 }
 
-<div class="react-render" data-component="CommentsWrapper" data-props="@(new { slideId = Model.Slide.Id, courseId = Model.CourseId, user = commentsWrapperUser, userRoles = commentsWrapperUserRoles }.JsonSerialize())"></div>
+<div class="react-render" data-component="CommentsWrapper" data-props="@(new CommentsWrapperData { SlideId = Model.Slide.Id, CourseId = Model.CourseId, User = commentsWrapperUser, UserRoles = commentsWrapperUserRoles }.JsonSerialize())"></div>
 
 <h3>Комментарии</h3>
 
