--- a/src/Frontend/src/components/comments/CommentsWrapper/CommentsWrapper.less
+++ b/src/Frontend/src/components/comments/CommentsWrapper/CommentsWrapper.less
@@ -8,6 +8,10 @@
   flex-direction: column;
   margin: 20px 0;
   border-bottom: 1px solid #eee;
+
+  a, a:hover, a:active {
+    text-decoration: none;
+  }
 }
 
 .headerRow {
