--- a/src/Frontend/src/components/comments/CommentsList/CommentsList.less
+++ b/src/Frontend/src/components/comments/CommentsList/CommentsList.less
@@ -8,3 +8,22 @@
 .sendButtonText {
   margin-left: 4px;
 }
+
+/*classes for react-transition-group*/
+.enter {
+  background-color: #FFF0BC;
+}
+
+.enterActive  {
+  background-color: transparent;
+  transition: background-color 3000ms ease-in-out;
+}
+
+.exit {
+  opacity: 1;
+}
+
+.exitActive {
+  opacity: 0.01;
+  transition: opacity 3000ms ease-in-out;
+}
