Changed CommentsWrapper to CommentsView.

--- a/src/Frontend/src/components/comments/CommentsView/CommentsView.less
+++ b/src/Frontend/src/components/comments/CommentsView/CommentsView.less
@@ -6,8 +6,7 @@
 .header {
   display: flex;
   flex-direction: column;
-  margin: 20px 0;
-  border-bottom: 1px solid #eee;
+  margin: 20px 0 0;
 
   a, a:hover, a:active {
     text-decoration: none;
@@ -19,7 +18,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 20px 0;
+  margin: 20px 0 0;
 }
 
 .headerName {
@@ -31,8 +30,12 @@
   font-weight: 400;
 }
 
+.tabs {
+  border-bottom: 1px solid #eee;
+}
+
 .commentsContainer {
-  margin-top: 30px;
+  margin-top: 15px;
 }
 
 .commentsCount {
