--- a/src/Frontend/src/components/comments/CommentsList/CommentsList.less
+++ b/src/Frontend/src/components/comments/CommentsList/CommentsList.less
@@ -9,6 +9,18 @@
   margin-left: 4px;
 }
 
+.emptyComments {
+  border: 1px solid #E5E5E5;
+  border-radius: 3px;
+  font-family: Segoe UI, serif;
+  font-size: 16px;
+  color: #616161;
+  letter-spacing: 1px;
+  padding: 30px 80px;
+  text-align: center;
+  line-height: 21px;
+}
+
 /*classes for react-transition-group*/
 .enter {
   background-color: #FFF0BC;
@@ -16,7 +28,7 @@
 
 .enterActive  {
   background-color: transparent;
-  transition: background-color 3000ms ease-in-out;
+  transition: background-color 3000ms ease;
 }
 
 .exit {
@@ -25,5 +37,5 @@
 
 .exitActive {
   opacity: 0.01;
-  transition: opacity 3000ms ease-in-out;
+  transition: opacity 1000ms ease;
 }
