--- a/src/Frontend/src/components/comments/Stub/Stub.less
+++ b/src/Frontend/src/components/comments/Stub/Stub.less
@@ -2,18 +2,18 @@
   border: 1px solid #E5E5E5;
   box-sizing: border-box;
   border-radius: 3px;
-  width: 70%;
-  margin: 0 auto;
+  margin: 0 auto 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 30px 80px 20px;
+  text-align: center;
 }
 
 .stubText {
   font: 16px "Segoe UI";
-  line-height: 16px;
-  letter-spacing: 1.6px;
+  line-height: 21px;
+  letter-spacing: 1px;
   color: #616161;
-  text-align: center;
+  margin-bottom: 20px;
 }
