--- a/src/Frontend/src/components/comments/Comment/Comment.less
+++ b/src/Frontend/src/components/comments/Comment/Comment.less
@@ -29,7 +29,7 @@ button {
 .actions {
   display: flex;
   justify-content: flex-start;
-  margin: 5px 0 20px;
+  margin-top: 5px;
   cursor: pointer;
 }
 
@@ -56,6 +56,6 @@ button {
 .linkText {
   font-size: 13px;
   font-weight: 400;
-  margin-left: 5px;
+  margin: 0 20px 0 5px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
