Added groupMark in comment.

--- a/src/Frontend/src/components/comments/Comment/Marks/Marks.less
+++ b/src/Frontend/src/components/comments/Comment/Marks/Marks.less
@@ -19,11 +19,20 @@
   background: #3072C4;
 }
 
-.hiddenComment {
+.approvedComment {
   padding: 0 10px;
   background: #F2F2F2;
   border: 1px solid #E5E5E5;
   color: #A0A0A0;
+}
+
+.group {
+  border: 1px solid #F69C00;
+  color: #F69C00;
+  text-transform: uppercase;
+  line-height: 20px;
+  letter-spacing: 1px;
+  padding: 0 6px 1px;
 }
 
 .text {
