A lot of changes: 1) added debounce to api request; 2) change render method structure;  3) added condition and flag in state to animate comment;  4) added ref to DOM element for scrollTo; 5) change methods to send data, scrollToTop, addReply.

--- a/src/Frontend/src/components/comments/CommentsList/CommentsList.less
+++ b/src/Frontend/src/components/comments/CommentsList/CommentsList.less
@@ -1,3 +1,7 @@
+.thread {
+  margin-bottom: 25px;
+}
+
 .sendButton {
   color: #3072C4;
   font-family: Segoe UI, serif;
@@ -23,7 +27,7 @@
 
 /*classes for react-transition-group*/
 .enter {
-  background-color: #FFF0BC;
+  background-color: rgba(40,153,234,0.5);
 }
 
 .enterActive  {
