--- a/src/Frontend/src/components/comments/Thread/Thread.less
+++ b/src/Frontend/src/components/comments/Thread/Thread.less
@@ -1,10 +1,28 @@
 .replies {
-  margin: 15px 0 20px;
-  padding-right: 15px;
+  margin-top: 15px;
   width: 100%;
 }
 
 .replyForm {
   padding-right: 20px;
   width: 100%;
+}
+
+/*classes for react-transition-group*/
+.enter {
+  background-color: rgba(40,153,234,0.3);
+}
+
+.enterActive  {
+  background-color: transparent;
+  transition: background-color 3000ms ease;
+}
+
+.exit {
+  opacity: 1;
+}
+
+.exitActive {
+  opacity: 0.01;
+  transition: opacity 1000ms ease;
 }
