Added styles for mobile layout.

--- a/src/Frontend/src/components/comments/Comment/Comment.less
+++ b/src/Frontend/src/components/comments/Comment/Comment.less
@@ -29,6 +29,7 @@ button {
 .actions {
   display: flex;
   justify-content: flex-start;
+  align-items: baseline;
   margin-top: 5px;
   cursor: pointer;
 }
@@ -45,6 +46,7 @@ button {
   padding: 0;
   margin-right: 20px;
   cursor: pointer;
+  height: 20px;
 }
 
 .buttonText {
