--- a/src/Frontend/src/components/comments/Comment/Marks/Marks.less
+++ b/src/Frontend/src/components/comments/Comment/Marks/Marks.less
@@ -20,13 +20,14 @@
 }
 
 .approvedComment {
-  padding: 0 10px;
+  padding: 0 6px;
   background: #F2F2F2;
   border: 1px solid #E5E5E5;
   color: #A0A0A0;
 }
 
 .group {
+  display: none;
   border: 1px solid #F69C00;
   color: #F69C00;
   text-transform: uppercase;
